Override ansible role versions only if OSA version is not master
If OSA version is set to master, we should use the role versions
directly from upstream to ensure we do not cause issues by the
use of wrong role versions.

Change-Id: I26005d23944445bf287384f90c7f2e139224ab23
Signed-off-by: Fatih Degirmenci <fatih.degirmenci@ericsson.com>

--- a/xci/playbooks/configure-opnfvhost.yml
+++ b/xci/playbooks/configure-opnfvhost.yml
@@ -82,6 +82,8 @@
       shell: "/bin/cp -rf {{OPNFV_RELENG_PATH}}/xci/file/setup-openstack.yml {{OPENSTACK_OSA_PATH}}/playbooks"
     - name: copy OPNFV role requirements
       shell: "/bin/cp -rf {{OPNFV_RELENG_PATH}}/xci/file/ansible-role-requirements.yml {{OPENSTACK_OSA_PATH}}"
+      when:
+        - OPENSTACK_OSA_VERSION != "master"
     - name: bootstrap ansible on opnfv host
       command: "/bin/bash ./scripts/bootstrap-ansible.sh"
       args:
