--- a/xci/playbooks/configure-opnfvhost.yml
+++ b/xci/playbooks/configure-opnfvhost.yml
@@ -104,6 +104,16 @@
       shell: "/bin/cp -rf {{OPNFV_RELENG_PATH}}/xci/file/ansible-role-requirements.yml {{OPENSTACK_OSA_PATH}}"
       when:
         - OPENSTACK_OSA_VERSION != "master"
+    - name: copy other files for pinning versions
+      shell: "/bin/cp -rf {{OPNFV_RELENG_PATH}}/xci/file/{{ item }} {{OPENSTACK_OSA_PATH}}/playbooks/defaults/repo_packages/{{ item }}"
+      with_items:
+        - "openstack_services.yml"
+        - "openstack_testing.yml"
+        - "opendaylight.yml"
+        - "nova_consoles.yml"
+        - "gnocchi.yml"
+      when:
+        - OPENSTACK_OSA_VERSION != "master"
     - name: bootstrap ansible on opnfv host
       command: "/bin/bash ./scripts/bootstrap-ansible.sh"
       args:
