Ensure XCI_DEVEL_ROOT is removed
It is important to start with a clean XCI_DEVEL_ROOT in order to
ensure the leftovers from the previous deployment doesn't result
in successful or failed deployments due to not having it in sync
with the latest updates.

Change-Id: I00d77e1fc62cccda7920af3469af9d44247780f4
Signed-off-by: Fatih Degirmenci <fatih.degirmenci@ericsson.com>

--- a/xci/playbooks/roles/remove-folders/tasks/main.yml
+++ b/xci/playbooks/roles/remove-folders/tasks/main.yml
@@ -17,5 +17,6 @@
     - "{{ OPENSTACK_BIFROST_PATH }}"
     - "{{ OPENSTACK_OSA_PATH }}"
     - "{{ OPENSTACK_OSA_ETC_PATH }}"
+    - "{{ XCI_DEVEL_ROOT }}"
     - "{{ LOG_PATH }} "
     - "{{ OPNFV_SSH_HOST_KEYS_PATH }}"
