--- a/xci/playbooks/provision-vm-nodes.yml
+++ b/xci/playbooks/provision-vm-nodes.yml
@@ -83,9 +83,11 @@
   connection: local
   become: yes
   vars_files:
-    - ../var/{{ ansible_os_family }}.yml
     - ../var/opnfv.yml
   tasks:
+    - name: Load distribution variables
+      include_vars:
+        file: ../var/{{ ansible_os_family }}.yml
     - name: destroy VM nodes created by previous deployment
       command: "/bin/bash ./scripts/destroy-env.sh"
       args:
