--- a/xci/playbooks/provision-vm-nodes.yml
+++ b/xci/playbooks/provision-vm-nodes.yml
@@ -76,9 +76,11 @@
   connection: local
   become: yes
   vars_files:
-    - ../var/{{ ansible_os_family }}.yml
     - ../var/opnfv.yml
   tasks:
+    - name: Load distribution variables
+      include_vars:
+        file: ../var/{{ ansible_os_family }}.yml
     - name: destroy VM nodes created by previous deployment
       command: "/bin/bash ./scripts/destroy-env.sh"
       args:
@@ -87,9 +89,11 @@
 - hosts: localhost
   connection: local
   vars_files:
-    - ../var/{{ ansible_os_family }}.yml
     - ../var/opnfv.yml
   tasks:
+    - name: Load distribution variables
+      include_vars:
+        file: ../var/{{ ansible_os_family }}.yml
     - name: create and provision VM nodes for the flavor {{ XCI_FLAVOR }}
       command: "/bin/bash ./scripts/bifrost-provision.sh"
       args:
