Integrate ceph in XCI
Change-Id: Ifd8d16fdce2914b6316842e72bbfd93228ea059d
Signed-off-by: wutianwei <wutianwei1@huawei.com>

--- a/xci/playbooks/configure-targethosts.yml
+++ b/xci/playbooks/configure-targethosts.yml
@@ -32,6 +32,8 @@
     - role: configure-network
     # we need to force sync time with ntp or the nodes will be out of sync timewise
     - role: synchronize-time
+    - role: configure-ceph
+      when: XCI_CEPH_ENABLED == true
 
 - hosts: compute00
   remote_user: root
