Integrate ceph in XCI
Change-Id: Ifd8d16fdce2914b6316842e72bbfd93228ea059d
Signed-off-by: wutianwei <wutianwei1@huawei.com>

--- a/xci/file/aio/configure-opnfvhost.yml
+++ b/xci/file/aio/configure-opnfvhost.yml
@@ -11,6 +11,12 @@
       args:
         chdir: "{{OPENSTACK_OSA_PATH}}"
     - name: bootstrap opnfv host as aio
+      command: "export SCENARIO='ceph' && /bin/bash ./scripts/bootstrap-aio.sh"
+      args:
+        chdir: "{{OPENSTACK_OSA_PATH}}"
+      when: XCI_CEPH_ENABLED == true
+    - name: bootstrap opnfv host as aio
       command: "/bin/bash ./scripts/bootstrap-aio.sh"
       args:
         chdir: "{{OPENSTACK_OSA_PATH}}"
+      when: XCI_CEPH_ENABLED != true
