[WIP] integrate ceph
Change-Id: Ifd8d16fdce2914b6316842e72bbfd93228ea059d
Signed-off-by: wutianwei <wutianwei1@huawei.com>

--- a/xci/file/aio/configure-opnfvhost.yml
+++ b/xci/file/aio/configure-opnfvhost.yml
@@ -13,6 +13,6 @@
       args:
         chdir: "{{OPENSTACK_OSA_PATH}}"
     - name: bootstrap opnfv host as aio
-      command: "/bin/bash ./scripts/bootstrap-aio.sh"
+      command: "export SCENARIO='ceph' && /bin/bash ./scripts/bootstrap-aio.sh"
       args:
         chdir: "{{OPENSTACK_OSA_PATH}}"
