Integrate ceph in XCI
Openstack ansible support to deploy ceph.
The purpose of this patch is to configurate the ceph,
just like we configurate others openstack components.

The default is not deploying ceph.
If you want to deploy ceph. you just need to
export XCI_CEPH_ENABLED=true before running xci-deploy.sh.
When deploying successfully, the openstack storge will use ceph.

Add nfs_file_gw: False in user_variables.yml.
it is not use in openstack-ansible.
note: this patchset test ceph actually works or not

Change-Id: Ifd8d16fdce2914b6316842e72bbfd93228ea059d
Signed-off-by: wutianwei <wutianwei1@huawei.com>

--- a/xci/file/mini/user_variables.yml
+++ b/xci/file/mini/user_variables.yml
@@ -27,6 +27,7 @@ haproxy_keepalived_external_interface: br-vlan
 haproxy_keepalived_internal_interface: br-mgmt
 gnocchi_db_sync_options: ""
 
+nfs_file_gw: False
 # The settings below are taken from aio since this flavor is mostly
 # for short CI loops and users with lower requirements.
 # https://github.com/openstack/openstack-ansible/blob/master/tests/roles/bootstrap-host/templates/user_variables.aio.yml.j2
