--- a/xci/file/noha/user_variables.yml
+++ b/xci/file/noha/user_variables.yml
@@ -27,6 +27,7 @@ haproxy_keepalived_external_interface: br-vlan
 haproxy_keepalived_internal_interface: br-mgmt
 gnocchi_db_sync_options: ""
 
+nfs_file_gw: False
 # The settings below are taken from aio to ensure we can bump OSA SHA with current
 # RAM allocation. Higher values will be tested once the bump is done.
 # https://github.com/openstack/openstack-ansible/blob/master/tests/roles/bootstrap-host/templates/user_variables.aio.yml.j2
