xci: configure-localhost: Do not check /etc/ssl/certs on SUSE
/etc/ssl/certs is a symlink so skip this task on SUSE.

Change-Id: Ibc188b76f47c4f7d1c5aa452a21e838420d65e6a
Signed-off-by: Markos Chandras <mchandras@suse.de>

--- a/xci/playbooks/configure-localhost.yml
+++ b/xci/playbooks/configure-localhost.yml
@@ -86,6 +86,7 @@
       file:
         path: "/etc/ssl/certs"
         state: directory
+      when: ansible_pkg_mgr != 'zypper'
     - name: create key directory /etc/ssl/private
       file:
         path: "/etc/ssl/private"
