Create /etc/ssl/private as root
The directory /etc/ssl is read-only for normal users, so we must become
root to modify it

Change-Id: I6b65c3d8a34e9d7aa41707ff4c6458e20f57c46f

--- a/xci/playbooks/configure-localhost.yml
+++ b/xci/playbooks/configure-localhost.yml
@@ -82,6 +82,7 @@
         state: directory
       when: check_etc_ssl_certs.stat.exists == false
     - name: create key directory /etc/ssl/private
+      become: true
       file:
         path: "/etc/ssl/private"
         state: directory
