integrate ceph in XCI
Change-Id: Iac005356a63ab6d8273e31dc6d3ee6b793730436
Signed-off-by: wutianwei <wutianwei1@huawei.com>

--- a/xci/playbooks/configure-opnfvhost.yml
+++ b/xci/playbooks/configure-opnfvhost.yml
@@ -82,7 +82,7 @@
       shell: "/bin/cp -rf {{OPNFV_RELENG_PATH}}/xci/file/cinder.yml {{OPENSTACK_OSA_ETC_PATH}}/env.d"
   
     - name: copy ceph.yml
-      shell: "/bin/cp -rf {{OPNFV_RELENG_PATH}}/xci/file/ceph.yml {{OPENSTACK_OSA_ETC_PATH}}/conf.d/"
+      shell: "/bin/cp -rf {{XCI_FLAVOR_ANSIBLE_FILE_PATH}}/ceph.yml {{OPENSTACK_OSA_ETC_PATH}}/conf.d/"
     - name: copy user_ceph.yml
       shell: "/bin/cp -rf {{OPNFV_RELENG_PATH}}/xci/file/user_ceph.yml {{OPENSTACK_OSA_ETC_PATH}}/user_ceph.yml"
     - name: copy user_variables_ceph.yml
