--- a/xci/var/RedHat.yml
+++ b/xci/var/RedHat.yml
@@ -9,3 +9,4 @@
 ##############################################################################
 # this is placeholder and left blank intentionally to complete later on
 python_crypto_package_name: python-crypto
+docker_package_name: docker
