--- a/xci/var/Suse.yml
+++ b/xci/var/Suse.yml
@@ -10,3 +10,4 @@
 # this is the interface the VM nodes are connected to libvirt network "default"
 interface: "eth0"
 python_crypto_package_name: python-pycrypto
+docker_package_name: docker
