Call opnfv-configuration playbook as per the flavor.
- Correct relative path to var-files

Change-Id: I34c22d4262f3c6108cecc701eb2abed5edb43ee6
Signed-off-by: Taseer Ahmed <taseer94@gmail.com>

--- a/xci/file/aio/configure-opnfvhost.yml
+++ b/xci/file/aio/configure-opnfvhost.yml
@@ -4,14 +4,14 @@
   gather_facts: true
   become: yes
   vars_files:
-    - ../var/opnfv.yml
+    - ../../var/opnfv.yml
   roles:
     - role: remove-folders
 
 - hosts: opnfv
   remote_user: root
   vars_files:
-    - ../var/opnfv.yml
+    - ../../var/opnfv.yml
     - { role: clone-repository, project: "openstack/openstack-ansible", repo: "{{ OPENSTACK_OSA_GIT_URL }}", dest: "{{ OPENSTACK_OSA_PATH }}", version: "{{ OPENSTACK_OSA_VERSION }}" }
   tasks:
     - name: bootstrap ansible on opnfv host
