xci: playbooks: synchronize-time: Fix service name for openSUSE
In openSUSE, the chrony service is 'chronyd'.

Change-Id: Ifb946b0ba49783108a84dd5b998d9d45f5c9df51
Signed-off-by: Markos Chandras <mchandras@suse.de>

--- a/xci/playbooks/roles/synchronize-time/tasks/main.yml
+++ b/xci/playbooks/roles/synchronize-time/tasks/main.yml
@@ -13,7 +13,7 @@
     state: latest
 - name: restart chrony
   service:
-    name: chrony
+    name: "{{ (ansible_pkg_mgr == 'apt') | ternary('chrony', 'chronyd') }}"
     state: restarted
 - name: synchronize time
   shell: "chronyc -a 'burst 4/4' && chronyc -a makestep"
